--- a/index.html
+++ b/index.html
@@ -104,16 +104,40 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Deforming t-dg-categories
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            
+                            Julie Symons, University of Antwerp
                         </div>
 
                         <div class="abstract">
-                            
+                            It is well-known that the Hochschild cohomology of an 
+                            algebraic object (such as an algebra or a linear category) 
+                            should govern its deformations. In the case of a dg-category however, 
+                            the Hochschild cohomology has been shown to parametrize not the 
+                            dg-deformations, but the curved A-infinity deformations. This 
+                            phenomenon is known as the curvature problem. We therefore seek a 
+                            different deformation-theoretic interpretation of the Hochschild 
+                            cohomology of a dg-category. Motivated by the example of the bounded 
+                            derived category of an abelian category — which can be approached via 
+                            the deformation theory of abelian categories in the sense of 
+                            Lowen-Van den Bergh — we develop the deformation theory of other 
+                            dg-categories with similar extra data: pretriangulated dg-categories 
+                            with a t-structure, abbreviated to t-dg-categories. 
+
+                            In this talk, I will introduce t-dg-categories following the prototypical 
+                            example of the bounded derived category of an abelian category, and 
+                            establish their deformation theory, thus allowing for novel 
+                            interpretations of the higher Hochschild cohomology groups. 
+                            In particular, we will discuss a deformation equivalence between 
+                            the bounded t-deformations of a bounded t-dg-category on the one hand, 
+                            and dg-deformations of the dg-category of derived injective 
+                            ind-dg-objects on the other hand. Since this latter dg-category 
+                            is cohomologically concentrated in nonpositive degrees, we do not 
+                            encounter curvature. This is joint work with Francesco Genovese, 
+                            Wendy Lowen and Michel Van den Bergh.
                         </div>
 
                         <!--<div class="notes">
