Speaker for 20 May

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">May</div>
-                        <div class="date">20th</div>
+                        <div class="date">20</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
@@ -107,7 +107,7 @@
                         </div>
 
                         <div class="speaker">
-                            
+                            Anibal Aravena, University of Massachusetts Amherst
                         </div>
 
                         <div class="abstract">
@@ -132,7 +132,7 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">May</div>
-                        <div class="date">6th</div>
+                        <div class="date">6</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
