--- a/index.html
+++ b/index.html
@@ -95,6 +95,42 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">June</div>
+                        <div class="date">3</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Vanja Zuliani, Université Paris-Saclay
+                        </div>
+
+                        <div class="abstract">
+                            
+                        </div>
+
+                        <!--<div class="notes">
+                            <a href="notes/dogs-03_06_25.pdf">Notes</a>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">May</div>
                         <div class="date">20</div>
                         <div class="time">3pm - 4pm</div>
@@ -130,15 +166,6 @@
                         </div>-->
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
