--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Semiorthogonal decompositions from quantum cohomology
                             </h3>
                         </div>
 
@@ -111,7 +111,12 @@
                         </div>
 
                         <div class="abstract">
-                            
+                            In this seminar I will review some conjectures by Halper-Leistner on the non-commutative MMP. 
+                            One of the central aspects of this program is to show how quantum cohomology induces, via 
+                            Bridgeland stability conditions, a sort of “canonical” semi-orthogonal decomposition of the 
+                            derived category.
+                            Halpern-Leistner studied the NCMMP for curves. Time permitting I will show how quantum 
+                            cohomology of projective spaces P^n induces semiorthogonal decompositions.
                         </div>
 
                         <!--<div class="notes">
