--- a/index.html
+++ b/index.html
@@ -96,6 +96,50 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">June</div>
+                        <div class="date">17</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Semiorthogonal decompositions for quiver moduli
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Vanja Zuliani, Université Paris-Saclay
+                        </div>
+
+                        <div class="abstract">
+                            We introduce the moduli spaces of representations of quivers. 
+                            Following the resemblance to moduli spaces of vector bundles on 
+                            algebraic curves, we propose a probing method for their derived 
+                            categories: by embedding several copies of the derived category 
+                            of the quiver itself, we obtain partial semiorthogonal decompositions 
+                            and, in some cases, full strongly exceptional collections.
+                            <br>
+
+                            This work is supported by the Luxembourgish National Research Fund (AFR-17953441)
+                        </div>
+
+                        <!--<div class="notes">
+                            <a href="notes/dogs-17_06_25.pdf">Notes</a>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">June</div>
                         <div class="date">3</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -123,16 +167,6 @@
                             <a href="notes/dogs-03_06_25.pdf">Notes</a>
                         </div>-->
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
