Fixed layout bug

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                             <a href="notes/dogs-03_06_25.pdf">Notes</a>
                         </div>-->
                     </div>
+                </div>
 
                 <div class="details-box">
                     <div class="cal">
