--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </div>
 
                         <div class="speaker">
-                            Vanja Zuliani, Université Paris-Saclay
+                            Gianni Petrella, University of Luxembourg
                         </div>
 
                         <div class="abstract">
