Talk details 24th June

--- a/index.html
+++ b/index.html
@@ -102,6 +102,52 @@
                     <div class="details">
                         <div class="title">
                             <h3>
+                                Bridgeland stability on Kuznetsov components via quadric fibrations
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Peize Liu, University of Warwick
+                        </div>
+
+                        <div class="abstract">
+                            Bridgeland stability is notoriously hard to construct on 
+                            varieties of dimension > 2. One promising workaround is 
+                            to focus on the Kuznetsov component of Fano varieties - a residual 
+                            piece of the derived category that often captures the 
+                            essential geometric information. In this talk, I will explain 
+                            the construction of stability conditions on Kuznetsov 
+                            components using the machinery of quadric fibrations introduced 
+                            by Bayer--Lahoz--Macrì--Stellari (arXiv:1703.10839). I will 
+                            illustrate how this technique applies to cubic 3-folds and 4-folds, 
+                            and poke at the curious cubic 5-fold creatures I have been exploring 
+                            recently. If time permits, I will discuss some applications to moduli spaces.
+                        </div>
+
+                        <!--<div class="notes">
+                            <a href="notes/dogs-24_06_25.pdf">Notes</a>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">June</div>
+                        <div class="date">17</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
                                 Semiorthogonal decompositions for quiver moduli
                             </h3>
                         </div>
@@ -127,15 +173,6 @@
                         </div>-->
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
