--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
                         working in Derived Categories. The seminar takes place <b>fortnightly on Zoom</b>
                         (link: <a href="https://ucl.zoom.us/j/95256182114">https://ucl.zoom.us/j/95256182114 </a>)
-                        on <b>Tuesdays from 3pm to 4pm (London time)</b>.
+                        on <b>Tuesdays from 3pm to 4pm (UK time)</b>.
                         <br><br>
                         The goal of this seminar, above all, is to be useful to its audience. Rather than a more 
                         research-oriented seminar, we hope this seminar to be a place where we can teach each other 
                         what we've learnt so far in our PhD. This is because the fastest and best way to learn is to 
                         have someone who has spent hours learning something explain it to you! 
-                        If you'd like to speak or have any other questions, please contact Michela Barbieri 
-                        (michela.barbieri.21@ucl.ac.uk) or Aporva Varshney (aporva.varshney.22@ucl.ac.uk).
+                        If you'd like to speak or have any other questions, please contact Calum Crossley 
+                        (calum.crossley.23@ucl.ac.uk) or Aporva Varshney (aporva.varshney.22@ucl.ac.uk).
 
                         <br><br>
                         If you'd like to receive talk announcements, please email <b>derivedobsessed-join@ucl.ac.uk</b>
@@ -68,14 +68,11 @@
 
                         If you'd like to unsubscribe, please email
                         <b>derivedobsessed-leave@ucl.ac.uk</b>. Note both the Subject: header and body of such a message are ignored.</b>
-
-                        <br><br>
-                        Some talks may be recorded. If you would like the password for these recordings, please email one of the organisers.
                     </div>
 
                     <!-- Break banner -->
                     <h2 id="break-banner">
-                        DOGS is on a break. Thanks to all those who gave a talk and attended this year!
+                        DOGS will be starting back up again this term. Stay tuned!
                     </h2>
                 </div>
                     
