Update link and schedule

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div id="information">
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
                         working in Derived Categories. The seminar takes place <b>fortnightly on Zoom</b>
-                        (link: <a href="https://ucl.zoom.us/j/95256182114">https://ucl.zoom.us/j/95256182114 </a>)
+                        (link: <a href="https://ucl.zoom.us/j/92051924258">https://ucl.zoom.us/j/92051924258</a>)
                         on <b>Tuesdays from 3pm to 4pm (UK time)</b>.
                         <br><br>
                         The goal of this seminar, above all, is to be useful to its audience. Rather than a more 
@@ -85,35 +85,46 @@
 
         <div id="img-separator-1"></div>
 
-        <!-- comment this when on break 
+        <!-- comment this when on break -->
         <div id="next-talk">
             <div class="content">
                 <h2>Next Talk</h2> 
 
                 <div class="details-box">
                     <div class="cal">
-                        <div class="month">June</div>
-                        <div class="date">24</div>
+                        <div class="month">October</div>
+                        <div class="date">28</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                An introduction to Bridgeland stability
+                                conditions on threefolds
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            
+                            Guido Neulaender, Universidade de Campinas
                         </div>
 
                         <div class="abstract">
-                            
+                            Bridgeland stability conditions have gain
+                            popularity recently in algebraic geometry as an
+                            important tool in the study of smooth projective
+                            varieties and their moduli spaces. In this talk, we
+                            give an introduction to this important
+                            construction, show how we can build such
+                            stabilities for Fano 3-folds and computes some
+                            stable objects for Picard rank 1. We also explain
+                            the difficulties for going beyond dimension 3 and
+                            what has been done recently to try to achieve this
+                            goal.
                         </div>
 
-                        <div class="notes">
+                        <!-- <div class="notes">
                             <a href="notes/dogs-24_06_25.pdf">Notes</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
