Remove break banner

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     </div>
 
                     <!-- Break banner -->
-                    <h2 id="break-banner">
-                        DOGS will be starting back up again this term. Stay tuned!
-                    </h2>
+                    <!-- <h2 id="break-banner">
+                        The DOGS are home for Christmas. See you next term!
+                    </h2> -->
                 </div>
                     
                 <div id="right-images">
