Add Guido's notes

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                             goal.
                         </div>
 
-                        <!-- <div class="notes">
-                            <a href="notes/dogs-24_06_25.pdf">Notes</a>
-                        </div> -->
+                        <div class="notes">
+                            <a href="notes/dogs-28_10_25.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
             </div>
