--- a/index.html
+++ b/index.html
@@ -92,6 +92,53 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">November</div>
+                        <div class="date">11</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                Gepner-Type Stability Conditions
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Chunkai Xu, University of Warwick
+                        </div>
+
+                        <div class="abstract">
+                            The construction of Bridgeland stability conditions
+                            on explicit triangulated categories remains an
+                            intriguing and challenging problem. So far, most
+                            known examples occur on varieties of dimension less
+                            than four. In this talk, after a quick review of
+                            the Bayer–Macrì–Toda construction on threefolds, we
+                            will focus on Toda’s series of works on Gepner-type
+                            stability conditions, motivated by graded matrix
+                            factorizations and mirror symmetry. We will also
+                            discuss some recent progress toward the
+                            construction of Gepner-type stability conditions on
+                            the quintic threefold.
+                        </div>
+
+                        <!-- <div class="notes">
+                            <a href="notes/dogs-28_10_25.pdf">Notes</a>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">October</div>
                         <div class="date">28</div>
                         <div class="time">3pm - 4pm</div>
@@ -127,15 +174,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
