--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="content">
                 <h2>Next Talk</h2> 
 
-                <!-- <div class="details-box">
+                <div class="details-box">
                     <div class="cal">
                         <div class="month">November</div>
                         <div class="date">25</div>
@@ -99,23 +99,34 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Guide to Orlov's theorem
                             </h3>
                         </div>
 
                         <div class="speaker">
-                            Lachlan Potter
+                            Calum Crossley
                         </div>
 
                         <div class="abstract">
-                            TBA
+                            A celebrated result of Orlov equates the derived
+                            category of a Calabi-Yau hypersurface (or the
+                            Kuznetsov component of a Fano hypersurface) with a
+                            category of "graded matrix factorizations" for the
+                            defining equation. Physically, this was predicted
+                            by Witten from viewing both sides as different
+                            limit points of a physical theory (a GLSM), which
+                            mathematically manifests as a variation of GIT
+                            quotients (a flop). In this talk I will introduce
+                            graded matrix factorizations, and explain the main
+                            ideas of the proof, shamelessly nabbed from my
+                            advisor's paper on it.
                         </div>
 
-                        <div class="notes">
+                        <!-- <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
-                        </div>
+                        </div> -->
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
 
