--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="speaker">
-                            Calum Crossley
+                            Calum Crossley, University College London
                         </div>
 
                         <div class="abstract">
