--- a/index.html
+++ b/index.html
@@ -90,6 +90,42 @@
             <div class="content">
                 <h2>Next Talk</h2> 
 
+                <!-- <div class="details-box">
+                    <div class="cal">
+                        <div class="month">December</div>
+                        <div class="date">9</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+
+                        </div>
+
+                        <div class="abstract">
+
+                        </div>
+
+                        <div class="notes">
+                            <a href="notes/dogs-25_11_25.pdf">Notes</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">November</div>
@@ -122,20 +158,11 @@
                             advisor's paper on it.
                         </div>
 
-                        <!-- <div class="notes">
+                        <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
