--- a/index.html
+++ b/index.html
@@ -90,34 +90,51 @@
             <div class="content">
                 <h2>Next Talk</h2> 
 
-                <!-- <div class="details-box">
+                <div class="details-box">
                     <div class="cal">
-                        <div class="month">December</div>
-                        <div class="date">9</div>
+                        <div class="month">January</div>
+                        <div class="date">20</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
                     <div class="details">
                         <div class="title">
                             <h3>
-
+                                How good are good moduli spaces?
                             </h3>
                         </div>
 
                         <div class="speaker">
-
+                            Ian Selvaggi,
+                            Scuola Internazionale Superiore di Studi Avanzati
                         </div>
 
                         <div class="abstract">
+                             Since the introduction of Bridgeland stability
+                             conditions, a very interesting problem has been
+                             that of constructing (proper) moduli spaces of
+                             semistable objects. In this talk, I will explain
+                             why the classical GIT approach fails in this case
+                             and how the machinery of good moduli spaces and
+                             intrinsic GIT can be employed to overcome the
+                             issue, drawing connections between the two
+                             approaches when possible.<br>
 
+                             I will survey the current state of research,
+                             namely that of stability conditions over
+                             noncommutative varieties. Lastly, I will outline
+                             ongoing work on how the properties necessary for
+                             the existence of good moduli spaces are preserved
+                             within connected components of the stability
+                             manifold.
                         </div>
 
-                        <div class="notes">
+                        <!-- <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div id="img-separator-2"></div>
         <!-- Break comment end -->
@@ -259,7 +276,7 @@
 
                         <div class="abstract">
                             Bridgeland stability is notoriously hard to construct on 
-                            varieties of dimension > 2. One promising workaround is 
+                            varieties of dimension gt; 2. One promising workaround is 
                             to focus on the Kuznetsov component of Fano varieties - a residual 
                             piece of the derived category that often captures the 
                             essential geometric information. In this talk, I will explain 
