--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                              and how the machinery of good moduli spaces and
                              intrinsic GIT can be employed to overcome the
                              issue, drawing connections between the two
-                             approaches when possible.<br>
-
+                             approaches when possible.
+                             <br> <br>
                              I will survey the current state of research,
                              namely that of stability conditions over
                              noncommutative varieties. Lastly, I will outline
@@ -318,8 +318,7 @@
                             categories: by embedding several copies of the derived category 
                             of the quiver itself, we obtain partial semiorthogonal decompositions 
                             and, in some cases, full strongly exceptional collections.
-                            <br>
-
+                            <br> <br>
                             This work is supported by the Luxembourgish National Research Fund (AFR-17953441)
                         </div>
 
