--- a/index.html
+++ b/index.html
@@ -92,10 +92,41 @@
 
                 <div class="details-box">
                     <div class="cal">
-                        <div class="month">January</div>
-                        <div class="date">20</div>
+                        <div class="month">February</div>
+                        <div class="date">3</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Ashesh Bati,
+                            Imperial College London
+                        </div>
+
+                        <!-- <div class="abstract">
+                        </div> -->
+
+                        <!-- <div class="notes">
+                            <a href="notes/dogs-25_11_25.pdf">Notes</a>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
                     <div class="details">
                         <div class="title">
                             <h3>
@@ -133,15 +164,6 @@
                         </div> -->
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
