Add missing date

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
                 <h2>Past Talks</h2>
 
                 <div class="details-box">
+                    <div class="cal">
+                        <div class="month">January</div>
+                        <div class="date">20</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
                     <div class="details">
                         <div class="title">
                             <h3>
