--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Curves on K3 surfaces and wall crossing
                             </h3>
                         </div>
 
