--- a/index.html
+++ b/index.html
@@ -108,8 +108,19 @@
                             Imperial College London
                         </div>
 
-                        <!-- <div class="abstract">
-                        </div> -->
+                        <div class="abstract">
+                            Brill-Noether theory is a way to understand the
+                            behaviour of smooth curves: it initially studied
+                            line bundles and their sections, but after works of
+                            Mukai, Lazarsfeld and others, (semi)stable bundles
+                            are also of interest. After Bridgeland introduced
+                            stability conditions, Bayer showcased a use for
+                            curves on K3 surfaces, by demonstrating the
+                            applications of wall-crossing. In this talk, I will
+                            talk about Lazarsfeld-Mukai bundles, give a brief
+                            introduction to tilt stability on K3 surfaces, and
+                            discuss works of Bayer and Feyzbakhsh.
+                        </div>
 
                         <!-- <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
