--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                Phantoms on Rational Surfaces
                             </h3>
                         </div>
 
@@ -108,8 +108,22 @@
                             Columbia University
                         </div>
 
-                        <!-- <div class="abstract">
-                        </div> -->
+                        <div class="abstract">
+                            Phantom categories, or admissible subcategories on
+                            which all additive invariants vanish, were once
+                            considered pathological phenomena unlikely to occur
+                            on simple enough varieties. So when Krah
+                            constructed a phantom on a blowup of ℙ², it came as
+                            a surprise and disproved several conjectures! Since
+                            then, there has been work on extending this
+                            construction to other rational surfaces. In this
+                            talk, I will explain these constructions and how
+                            they are proved using Kuznetsov's machinery of
+                            heights. I will also describe some tools used to
+                            study these phantoms, like Hochschild cohomology
+                            and a spectral sequence for computing Hom's between
+                            objects.
+                        </div>
 
                         <!-- <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
