--- a/index.html
+++ b/index.html
@@ -93,6 +93,42 @@
                 <div class="details-box">
                     <div class="cal">
                         <div class="month">February</div>
+                        <div class="date">24</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Bogdan Simeonov,
+                            LSGNT / Imperial College London
+                        </div>
+
+                        <!-- <div class="abstract">
+                        </div> -->
+
+                        <!-- <div class="notes">
+                            <a href="notes/dogs-25_11_25.pdf">Notes</a>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
+                        <div class="month">February</div>
                         <div class="date">17</div>
                         <div class="time">3pm - 4pm</div>
                     </div>
@@ -130,15 +166,6 @@
                         </div> -->
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
@@ -155,7 +182,7 @@
 
                         <div class="speaker">
                             Ashesh Bati,
-                            Imperial College London
+                            LSGNT / Imperial College London
                         </div>
 
                         <div class="abstract">
@@ -236,7 +263,7 @@
                         </div>
 
                         <div class="speaker">
-                            Calum Crossley, University College London
+                            Calum Crossley, LSGNT / University College London
                         </div>
 
                         <div class="abstract">
