--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                             objects.
                         </div>
 
-                        <!-- <div class="notes">
-                            <a href="notes/dogs-25_11_25.pdf">Notes</a>
-                        </div> -->
+                        <div class="notes">
+                            <a href="notes/dogs-17_02_26.pdf">Notes</a>
+                        </div>
                     </div>
                 </div>
 
