--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                     <div class="details">
                         <div class="title">
                             <h3>
-                                TBA
+                                The special McKay correspondence and
+                                homological mirror symmetry for orbifold
+                                surfaces 
                             </h3>
                         </div>
 
@@ -108,8 +110,26 @@
                             LSGNT / Imperial College London
                         </div>
 
-                        <!-- <div class="abstract">
-                        </div> -->
+                        <div class="abstract">
+                            In many occasions in algebraic geometry, one can
+                            relate the G-equivariant geometry of ℂ<sup>n</sup>
+                            to the geometry of the minimal resolution of
+                            ℂ<sup>n</sup>/G. I will discuss the case of surface
+                            cyclic quotient singularities, where G is a finite
+                            cyclic subgroup of GL(2,ℂ). It was proved by Ishii
+                            and Ueda <a href="https://arxiv.org/abs/1104.2381">arXiv:1104.2381</a>
+                            (categorifying earlier work of Wunram) that the
+                            derived category of a surface 𝓧 with cyclic
+                            quotient singularities admits a semi orthogonal
+                            decomposition with two components: one being a copy
+                            of the derived category of the minimal resolution Y
+                            of the coarse space X of 𝓧, and the other being a
+                            residual component indexed by what are called
+                            non-special representations. I will explain this
+                            result and, if time permits, describe an
+                            interpretation of it using mirror symmetry (as in
+                            my paper <a href="https://arxiv.org/abs/2602.04866">arXiv:2602.04866</a>).
+                        </div>
 
                         <!-- <div class="notes">
                             <a href="notes/dogs-25_11_25.pdf">Notes</a>
