--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <b>Derived Obsessed Graduate Students</b> (DOGS) is an online junior seminar for graduate students 
                         working in Derived Categories. The seminar takes place <b>fortnightly on Zoom</b>
                         (link: <a href="https://ucl.zoom.us/j/92051924258">https://ucl.zoom.us/j/92051924258</a>)
-                        on <b>Tuesdays from 3pm to 4pm (UK time)</b>.
+                        on <b>Tuesdays from 3pm to 4pm (UK time)</b> (usually).
                         <br><br>
                         The goal of this seminar, above all, is to be useful to its audience. Rather than a more 
                         research-oriented seminar, we hope this seminar to be a place where we can teach each other 
@@ -94,7 +94,7 @@
                     <div class="cal">
                         <div class="month">February</div>
                         <div class="date">24</div>
-                        <div class="time">3pm - 4pm</div>
+                        <div class="time">4:30pm - 5:30pm</div>
                     </div>
                     <div class="details">
                         <div class="title">
