--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                         </div> -->
 
                         <div class="notes">
-                            <a href="https://ucl.zoom.us/rec/share/6ivCf-4O6ntyj1aEQJ_Zy1OV7HKm63c5GQqVSeNG9y1yuIKdZQhWteYEl0YzswJp.n9_RuoeqbhMjFGnY">Recording</a>
+                            <a href="https://ucl.zoom.us/rec/share/dLQu6ltyZImBMu0KEhT9xEkSsIOlBz2OVDFVUb58ejY-PqDCfhSGKhq7YWWhzR4W.968HbGGmd_HGDEdV?startTime=1771950754000
+Passcode: 1?qbjGA4">Recording</a>
                         </div>
                     </div>
                 </div>
