--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                             my paper <a href="https://arxiv.org/abs/2602.04866">arXiv:2602.04866</a>).
                         </div>
 
-                        <!-- <div class="notes">
+                        <div class="notes">
                             <a href="notes/dogs-24_02_26.pdf">Notes</a>
-                        </div> -->
+                        </div>
 
                         <div class="notes">
                             <a href="https://ucl.zoom.us/rec/share/dLQu6ltyZImBMu0KEhT9xEkSsIOlBz2OVDFVUb58ejY-PqDCfhSGKhq7YWWhzR4W.968HbGGmd_HGDEdV?startTime=1771950754000
