--- a/index.html
+++ b/index.html
@@ -92,6 +92,42 @@
 
                 <div class="details-box">
                     <div class="cal">
+                        <div class="month">March</div>
+                        <div class="date">10</div>
+                        <div class="time">3pm - 4pm</div>
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            <h3>
+                                TBA
+                            </h3>
+                        </div>
+
+                        <div class="speaker">
+                            Alex Villaro Krüger,
+                            Steklov Mathematical Institute
+                        </div>
+
+                        <!-- <div class="abstract">
+                        </div> -->
+
+                        <!-- <div class="notes">
+                            <a href="notes/dogs-24_02_26.pdf">Notes</a>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="img-separator-2"></div>
+        <!-- Break comment end -->
+
+        <div id="schedule">
+            <div class="content">
+                <h2>Past Talks</h2>
+
+                <div class="details-box">
+                    <div class="cal">
                         <div class="month">February</div>
                         <div class="date">24</div>
                         <div class="time">4:30pm - 5:30pm</div>
@@ -141,15 +177,6 @@ Passcode: 1?qbjGA4">Recording</a>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div id="img-separator-2"></div>
-        <!-- Break comment end -->
-
-        <div id="schedule">
-            <div class="content">
-                <h2>Past Talks</h2>
 
                 <div class="details-box">
                     <div class="cal">
