--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                         <div class="speaker">
                             Alex Villaro Krüger,
-                            Steklov Mathematical Institute
+                            Steklov Mathematical Institute / Higher School of Economics
                         </div>
 
                         <!-- <div class="abstract">
